wine-winscard: switch to my fork again
For build fixes on wine >= 6.23 and a logic fix in SCardStatusA()

Also stops tracking multilib/wine as a preparation step for switching to
aur/wine-stable. Chasing bi-weekly development versions is difficult :/

--- a/archlinuxcn/wine-winscard/lilac.yaml
+++ b/archlinuxcn/wine-winscard/lilac.yaml
@@ -13,8 +13,10 @@ post_build_script: |
     update_aur_repo()
 
 update_on:
-  - source: alpm
-    alpm: wine
-    repo: multilib
+  # TODO: switch to wine-stable when 7.0 is out
+  # - source: aur
+  #   aur: wine-stable
   - source: manual
-    manual: 2
+    manual: 7.0rc1-1
+  - source: manual
+    manual: 3
