--- a/archlinuxcn/spread-sheet-widget/PKGBUILD
+++ b/archlinuxcn/spread-sheet-widget/PKGBUILD
@@ -14,8 +14,12 @@ depends=(
 makedepends=(
   python
 )
-source=("${pkgname}-${pkgver}.tar.gz::https://alpha.gnu.org/gnu/ssw/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('8589d8298fcf3b5850d0968b04801a4f40faf0555544f6cc9d954b0162e9954b')
+source=("${pkgname}-${pkgver}.tar.gz::https://alpha.gnu.org/gnu/ssw/${pkgname}-${pkgver}.tar.gz"
+        "${pkgname}-${pkgver}.tar.gz.sig::https://alpha.gnu.org/gnu/ssw/${pkgname}-${pkgver}.tar.gz.sig"
+)
+sha256sums=('8589d8298fcf3b5850d0968b04801a4f40faf0555544f6cc9d954b0162e9954b'
+            'SKIP')
+validpgpkeys=('BAF59BDF98664CEEF14D2A5A6A233DCD47A92289')
 
 prepare() {
   cd "${pkgname}-${pkgver}"
