Trigger rebuild for grpc update

--- a/archlinuxcn/across/lilac.yaml
+++ b/archlinuxcn/across/lilac.yaml
@@ -4,6 +4,10 @@ update_on:
   - source: cmd
     cmd: curl -sS https://raw.githubusercontent.com/ArkToria/ACross/master/pkgbuild/arch/across/PKGBUILD | grep pkgrel= | awk -F '=' '{print $2}'
   - alias: clang
+  - alias: protobuf
+  - source: alpm
+    alpm: grpc
+    repo: community
 
 maintainers:
   - github: dctxmei
