--- a/archlinuxcn/qv2ray-dev-git/PKGBUILD
+++ b/archlinuxcn/qv2ray-dev-git/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: DuckSoft <realducksoft@gmail.com>
 pkgname=qv2ray-dev-git
 pkgver=2.7.0.7000.r3037.a35ce6fb
-pkgrel=5
+pkgrel=6
 pkgdesc="Cross-platform V2Ray Client written in Qt (Development Release)"
 arch=('x86_64')
 url='https://github.com/Qv2ray/Qv2ray'
@@ -11,7 +11,7 @@ license=('GPL3')
 depends=('hicolor-icon-theme' 'qt5-base>5.11.0' 'grpc>=1.27.0' 'qt5-svg')
 optdepends=('v2ray: use system v2ray core.')
 makedepends=('git' 'make' 'qt5-tools' 'which' 'gcc' 'qt5-declarative'
-             'grpc-cli>=1.27.0' 'cmake' 'ninja')
+             'cmake' 'ninja')
 provides=('qv2ray')
 conflicts=('qv2ray')
 
