--- a/archlinuxcn/sysdig-lily/PKGBUILD
+++ b/archlinuxcn/sysdig-lily/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=sysdig-lily
 pkgver=0.28.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Open source system-level exploration and troubleshooting tool"
 arch=('x86_64')
 url="https://www.sysdig.com/"
 license=('GPL2' 'Apache' 'MIT')
-depends=('jsoncpp' 'libjsoncpp.so' 'luajit' 'curl' 'libcurl.so' 'jq' 'libb64' 'intel-tbb' 'grpc' "linux-lily=5.10.71-1" 'libgrpc++_unsecure.so')
+depends=('jsoncpp' 'libjsoncpp.so' 'luajit' 'curl' 'libcurl.so' 'jq' 'libb64' 'intel-tbb' 'grpc' "linux-lily=5.10.71-1" 'libgrpc++.so')
 makedepends=('cmake' 'llvm' 'clang' 'gtest' 'linux-lily-headers')
 source=("https://github.com/draios/sysdig/archive/$pkgver/sysdig-$pkgver.tar.gz"
         "bashcomp-location.patch")
