--- a/archlinuxcn/python-tokenizers/lilac.yaml
+++ b/archlinuxcn/python-tokenizers/lilac.yaml
@@ -4,8 +4,7 @@ maintainers:
 build_prefix: extra-x86_64
 
 update_on:
-  - source: github
-    github: huggingface/tokenizers
-    use_latest_release: true
+  - source: pypi
+    github: tokenizers
   - alias: python
 # vim:set ts=2 sw=2 et:
