--- a/archlinuxcn/python-tokenizers/lilac.yaml
+++ b/archlinuxcn/python-tokenizers/lilac.yaml
@@ -5,6 +5,6 @@ build_prefix: extra-x86_64
 
 update_on:
   - source: pypi
-    github: tokenizers
+    pypi: tokenizers
   - alias: python
 # vim:set ts=2 sw=2 et:
