--- a/archlinuxcn/isso/lilac.yaml
+++ b/archlinuxcn/isso/lilac.yaml
@@ -8,6 +8,8 @@ update_on:
   - source: pypi
     pypi: isso
   - alias: python
+  - source: manual
+    manual: 1
 
 repo_depends:
   - python-misaka
