--- a/archlinuxcn/uefitool-git/PKGBUILD
+++ b/archlinuxcn/uefitool-git/PKGBUILD
@@ -4,9 +4,9 @@ pkgname=uefitool-git
 _pkgname=uefitool
 _tools=(UEFIPatch UEFIReplace)
 pkgver=r228.44cafeb
-pkgrel=2
+pkgrel=1
 pkgdesc='UEFI firmware image viewer and editor and utilities'
-arch=("x86_64")
+arch=(any)
 url=https://github.com/LongSoft/UEFITool
 license=(BSD)
 depends=(qt5-base)
