--- a/archlinuxcn/retext-git/PKGBUILD
+++ b/archlinuxcn/retext-git/PKGBUILD
@@ -5,10 +5,9 @@
 # Contributor: alfplayer
 # Contributor: menta
 
-_pkgname=ReText
 pkgname=retext-git
 _pkgname=retext
-pkgver=7.2.1.r15.g8329423
+pkgver=7.2.1.r37.g4ef5eb3
 pkgrel=1
 pkgdesc="A simple editor for Markdown and ReStructuredText markup languages"
 arch=('any')
@@ -16,19 +15,17 @@ url="https://github.com/retext-project/retext"
 license=('GPL3')
 # for desktop integration: 'shared-mime-info' 'xdg-utils' 'desktop-file-utils'
 # for toolbar icons (see http://sourceforge.net/p/retext/tickets/44/): 'gconf'
-depends=('python-pyqt5' 'python-markups>=2.0.0' 'shared-mime-info' 'xdg-utils'
-         'desktop-file-utils' 'hicolor-icon-theme' 'python-markdown')
+depends=('python-pyqt5' 'python-markups>=2.0.0' 'shared-mime-info' 'xdg-utils' 'python-docutils'
+         'desktop-file-utils' 'hicolor-icon-theme' 'python-markdown' 'python-pygments' 'python-chardet')
 makedepends=('imagemagick' 'qt5-tools' 'python-setuptools' 'git')
-checkdepends=('xorg-server-xvfb' 'python-chardet' 'python-docutils' 'python-pygments')
-optdepends=('python-docutils: for reStructuredText language support'
-            'qt5-webkit: for WebKit preview'
+checkdepends=('xorg-server-xvfb' 'python-chardet' 'python-docutils')
+optdepends=('qt5-webkit: for WebKit preview'
+            'python-pyqtwebengine: for WebEngine preview'
             'python-pyenchant: for spell checking support')
 source=(
-        "git+https://github.com/retext-project/retext"
-        "x-retext-markdown.xml"
+        "retext::git+https://github.com/retext-project/retext.git"
         "x-retext-rst.xml")
 sha256sums=('SKIP'
-            'b51611479d3224eec2b58264ed91ace3eccb502b7b806dae3e7a3ab4aab8c4b8'
             '6fef80cccb14813d9cc74810c397a6cd7831d1ca243536759a47c6e8b6cc977a')
 validpgpkeys=('F24299FF1BBC9018B906A4CB6026936D2F1C8AE0') # Dmitry Shachnev <mitya57@debian.org>
 
@@ -62,13 +59,13 @@ package () {
     _ICONSDIR="$_SHAREDIR/icons/hicolor"
     for size in 16 22 24 32 48 128; do
       install -d -m 755 "$_ICONSDIR"/${size}x${size}/apps
-      convert -resize $size icons/$_pkgname.png "$_ICONSDIR"/${size}x${size}/apps/$_pkgname.png
+      convert -resize $size +set date:create +set date:modify ReText/icons/$_pkgname.png "$_ICONSDIR"/${size}x${size}/apps/$_pkgname.png
     done
     install -d -m 755 $_ICONSDIR/scalable/apps
-    install -m 644 icons/$_pkgname.svg "$_ICONSDIR"/scalable/apps/$_pkgname.svg
+    install -m 644 ReText/icons/$_pkgname.svg "$_ICONSDIR"/scalable/apps/$_pkgname.svg
 
     # install mime files
-    install -m 644 "$srcdir"/x-retext-{markdown,rst}.xml "$_SHAREDIR"/mime/packages/
+    install -m 644 "$srcdir"/x-retext-rst.xml "$_SHAREDIR"/mime/packages/
 }
 
 # vim:set ts=2 sw=2 et:
