[gimp-git] Update

--- a/archlinuxcn/gimp-git/PKGBUILD
+++ b/archlinuxcn/gimp-git/PKGBUILD
@@ -7,8 +7,8 @@
 
 pkgname=gimp-git
 _pkgname=${pkgname%-git}
-epoch=1
-pkgver=47711.3fe01513e7
+epoch=2
+pkgver=47713.9297ffeabe
 pkgrel=1
 pkgdesc="GNU Image Manipulation Program (non-conflicting git version)"
 arch=('i686' 'x86_64')
@@ -40,7 +40,7 @@ makedepends=('git' 'intltool>=0.40.1'
              'alsa-lib>=1.0.0' 'libxslt' 'glib-networking'
              'alsa-lib' 'curl' 'ghostscript' 'libxpm' 'webkit2gtk'
              'libheif' 'libwebp' 'libmng' 'iso-codes' 'aalib' 'zlib'
-             'gjs' 'python-gobject' 'luajit' 'meson' 'xorg-server-xvfb' 'gtk-doc')
+             'gjs' 'python-gobject' 'luajit' 'meson' 'xorg-server-xvfb' 'gtk-doc' 'gi-docgen')
 checkdepends=('xorg-server-xvfb')
 optdepends=('gutenprint: for sophisticated printing only as gimp has built-in cups print support'
             'alsa-lib: for MIDI event controller module'
