--- a/archlinuxcn/nordic-theme/lilac.yaml
+++ b/archlinuxcn/nordic-theme/lilac.yaml
@@ -1,13 +1,7 @@
 maintainers:
   - github: hamkido
 
-build_prefix: extra-x86_64
-
-pre_build_script: aur_pre_build(maintainers='hamki')
-
-post_build: aur_post_build
-
 update_on:
-  - source: aur
-    aur: nordic-theme
-
+  - source: github 
+    github: EliverLara/Nordic
+    use_latest_tag: true
