[wine-valve] New epoch

--- a/archlinuxcn/wine-valve/PKGBUILD
+++ b/archlinuxcn/wine-valve/PKGBUILD
@@ -6,9 +6,9 @@
 # Conttributor: xiretza <xiretza+aur@gmail.com>
 # Contributor: heavysink <winstonwu91 at gmail>
 pkgname=wine-valve
-epoch=1
-pkgver=6.3.8.rc5
-_pkgver='6.3-8-rc5'
+epoch=2
+pkgver=6.3.8c
+_pkgver='6.3-8c'
 pkgrel=1
 pkgdesc='A compatibility layer for running Windows programs (Valve version)'
 arch=('i686' 'x86_64')
@@ -208,6 +208,6 @@ package() {
     done
 }
 
-sha256sums=('7c480a300fe0f772fc2500cfc5bd6878426b36b22200c927a857fb1ad76b1e3f'
+sha256sums=('c300742c0be0d577ac3f46713bc3f8faff9aa9c424f43e61a93c8784e87caf50'
             '9901a5ee619f24662b241672a7358364617227937d5f6d3126f70528ee5111e7'
             '6dfdefec305024ca11f35ad7536565f5551f09119dda2028f194aee8f77077a4')
