ekho: updated from AUR

--- a/archlinuxcn/ekho/PKGBUILD
+++ b/archlinuxcn/ekho/PKGBUILD
@@ -1,34 +1,45 @@
-# Maintainer: Denis Kasak <dkasak|AT|termina.org.uk>
+# Maintainer: 0b100100 <0b100100 at protonmail dot ch>
+# Contributor: Denis Kasak <dkasak|AT|termina.org.uk>
 
 pkgname=ekho
-pkgver=7.7.1
-pkgrel=3
-pkgdesc="Chinese text-to-speech (TTS) software for Cantonese, Mandarin, Zhaoan Hakka, Tibetan, Ngangien and Korean"
+pkgver=8.6
+pkgrel=1
+pkgdesc="Multilingual text-to-speech (TTS) software for Cantonese, Mandarin, Toisanese, Zhaoan Hakka, Tibetan, Ngangien, Korean and English"
 arch=('i686' 'x86_64')
-url="http://www.eguidedog.net/ekho.php"
+url="https://www.eguidedog.net/ekho.php"
 license=('GPL')
-depends=('libpulse' 'lame' 'festival' 'ncurses' 'espeak')
-source=("http://downloads.sourceforge.net/e-guidedog/ekho-${pkgver}.tar.xz")
-md5sums=('dadf0739fe6a67e5a1de03750b23a4a7')
+depends=('espeak-ng' 'lame' 'festival')
+source=("https://downloads.sourceforge.net/e-guidedog/ekho-$pkgver.tar.xz")
+sha512sums=('cca7b95efe04fa377bec557c792bf6c7788caf5c0275c00979c20fd8c8acd20193c9968499ab3c1f3ee4bb29b0b43eabafd154d7a76ee87971430c1ea890ea39')
 
-build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+prepare() {
+  cd "$pkgname-$pkgver"
 
-  if [ "${CARCH}" == "x86_64" ]; then
-    CXXFLAGS="${CXXFLAGS} -D_x86_64 -fopenmp"
+  CXXFLAGS="$CXXFLAGS -fopenmp"
+  if [ "$CARCH" == "x86_64" ]; then
+    CXXFLAGS="$CXXFLAGS -D_x86_64"
   fi
 
   # fix undefined references to tget* functions
-  sed -ie                                                                                             \
+  sed -ie \
     's/^\(\s*LIB_FESTIVAL=.*\)-lncurses\(.*\)/\1-Wl,--push-state,--no-as-needed,-lncurses,--pop-state\2/' \
-    $srcdir/$pkgname-$pkgver/configure
+    configure
 
+  CXXFLAGS="$CXXFLAGS" \
+  LDFLAGS="$LDFLAGS" \
   ./configure --prefix=/usr --with-mp3lame --enable-festival
+}
+
+build() {
+  cd "$pkgname-$pkgver"
+
   make
 }
 
 package() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "$pkgname-$pkgver"
 
-  make DESTDIR="${pkgdir}/" install
+  make DESTDIR="$pkgdir/" install
 }
+
+# vim:set ts=2 sw=2 et:
