--- a/archlinuxcn/ekho/lilac.yaml
+++ b/archlinuxcn/ekho/lilac.yaml
@@ -1,7 +1,8 @@
 maintainers:
   - github: farseerfc
 build_prefix: extra-x86_64
-post_build: git_pkgbuild_commit
+pre_build: aur_pre_build
+post_build: aur_post_build
 update_on:
   - source: aur
     aur: ekho
