--- a/archlinuxcn/retext-git/lilac.yaml
+++ b/archlinuxcn/retext-git/lilac.yaml
@@ -5,6 +5,8 @@ update_on:
   - source: github
     github: retext-project/retext
   - alias: python
+  - source: manual
+    manual: 1
 
 pre_build: vcs_update
 post_build: git_pkgbuild_commit
