--- a/archlinuxcn/aurutils/lilac.yaml
+++ b/archlinuxcn/aurutils/lilac.yaml
@@ -5,7 +5,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build: aur_pre_build(maintainers=['Alad','rafasc','cgirard','maximbaz'])
+pre_build_script: aur_pre_build(maintainers=['Alad','rafasc','cgirard','maximbaz'])
 
 post_build: aur_post_build
 
