--- a/archlinuxcn/btrbk/lilac.yaml
+++ b/archlinuxcn/btrbk/lilac.yaml
@@ -5,7 +5,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build: aur_pre_build(maintainers=['akurei'])
+pre_build_script: aur_pre_build(maintainers=['akurei'])
 
 post_build: aur_post_build
 
