--- a/archlinuxcn/cdate/lilac.yaml
+++ b/archlinuxcn/cdate/lilac.yaml
@@ -5,8 +5,9 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-post_build: aur_post_build
+pre_build_script: aur_pre_build(maintainers=['farseerfc'])
+
 
 update_on:
-  - source: aur
-    aur: cdate
+  - source: github
+    github: vincascm/cdate
