--- a/archlinuxcn/miktex/PKGBUILD
+++ b/archlinuxcn/miktex/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: heavysink <winstonwu91 at gmail>
 
 pkgname=miktex
-pkgver=21.10
-pkgrel=3
+pkgver=21.12
+pkgrel=1
 pkgdesc="a distribution of the TeX/LaTeX typesetting system"
 arch=('x86_64')
 url="https://miktex.org"
@@ -14,7 +14,7 @@ depends=('apr' 'boost-libs' 'apr-util' 'bzip2' 'cairo' 'expat' 'fontconfig' 'fre
          'poppler' 'popt' 'potrace' 'uriparser' 'hicolor-icon-theme' 'zziplib' 'poppler-qt5' 'qt5-script' 'qt5-declarative')
 makedepends=('cmake' 'coreutils' 'fop' 'sed' 'libxslt' 'qt5-tools' 'boost')
 source=("https://github.com/MiKTeX/miktex/archive/${pkgver}.tar.gz")
-md5sums=('27e027eb34fa497fea23871c94b94d6e')
+md5sums=('b891740169297f38791aac1f295be42c')
 options=('!buildflags')
 
 build() {
@@ -22,7 +22,7 @@ build() {
     [ -d build ] || mkdir build
     cd build
     cmake -DCMAKE_INSTALL_PREFIX=/opt/miktex -DWITH_UI_QT=ON -DUSE_SYSTEM_POPPLER=TRUE -DUSE_SYSTEM_POPPLER_QT5=TRUE ..
-    make
+    make -j3
 }
 
 package() {
