--- a/archlinuxcn/tome4/lilac.yaml
+++ b/archlinuxcn/tome4/lilac.yaml
@@ -6,10 +6,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['Harns'])
-
-post_build: aur_post_build
-
 update_on:
-  - source: aur
-    aur: tome4
+  - source: vcs
+    vcs:
+    use_latest_tag: true
