[tome4] Use git for pkgver update

--- a/archlinuxcn/tome4/lilac.yaml
+++ b/archlinuxcn/tome4/lilac.yaml
@@ -8,5 +8,5 @@ build_prefix: extra-x86_64
 
 update_on:
   - source: vcs
-    vcs:
+    vcs: git+https://git.net-core.org/tome/t-engine4.git
     use_latest_tag: true
