[tome4] Try another configuration for lilac

--- a/archlinuxcn/tome4/lilac.yaml
+++ b/archlinuxcn/tome4/lilac.yaml
@@ -7,6 +7,6 @@ maintainers:
 build_prefix: extra-x86_64
 
 update_on:
-  - source: vcs
-    vcs: git+https://git.net-core.org/tome/t-engine4.git
-    use_latest_tag: true
+  - source: git
+    git: https://git.net-core.org/tome/t-engine4.git
+    use_max_tag: true
