--- a/archlinuxcn/servo-git/lilac.yaml
+++ b/archlinuxcn/servo-git/lilac.yaml
@@ -3,9 +3,13 @@ maintainers:
 
 build_prefix: extra-x86_64
 
+post_build: aur_post_build
+
 repo_depends:
   - depot-tools-git
 
 update_on:
+  - source: aur
+    aur: servo-git
   - source: github
     github: servo/servo
