--- a/archlinuxcn/i-nex-git/PKGBUILD
+++ b/archlinuxcn/i-nex-git/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=i-nex-git
 _pkgname=i-nex
 pkgver=7.6.1.r0.gcd1b78d
-pkgrel=2
+pkgrel=3
 pkgdesc="System information tool like hardinfo, sysinfo"
 arch=('i686' 'x86_64')
 url="http://i-nex.linux.pl/"
@@ -20,7 +20,7 @@ depends=('gambas3-runtime'
          'lsb-release'
          'curl'
          'procps-ng')
-makedepends=('git' 'gambas3-devel' 'gcc' 'imagemagick')
+makedepends=('git' 'gambas3-dev-tools' 'gcc' 'imagemagick')
 source=(${_pkgname}::"git+https://github.com/i-nex/I-Nex.git"
         "Fix-error-if-proc-mtrr-doesn-t-exist.patch"
 		"Fix-libcpuid-SOVERSION.patch"
