logiops-git: fix dependency

--- a/archlinuxcn/logiops-git/PKGBUILD
+++ b/archlinuxcn/logiops-git/PKGBUILD
@@ -11,7 +11,7 @@ pkgdesc="An unofficial driver for Logitech HID++>2.0 mice and keyboard"
 arch=('x86_64')
 url="https://github.com/PixlOne/$_pkgname"
 license=('GPL3')
-depends=('libevdev' 'libconfig' 'systemd-libs')
+depends=('libevdev' 'libconfig' 'systemd')
 makedepends=('git' 'cmake')
 conflicts=("${_pkgname}")
 provides=("${_pkgname}")
