--- a/archlinuxcn/lilac-git/PKGBUILD
+++ b/archlinuxcn/lilac-git/PKGBUILD
@@ -10,11 +10,12 @@ arch=(any)
 url='https://github.com/archlinuxcn/lilac'
 license=(GPL3)
 depends=(python git devtools nvchecker gnupg pid_children fakeroot bubblewrap pacman-contrib
-         python-requests python-lxml python-yaml python-tomli python-sqlalchemy pyalpm
+         python-requests python-lxml python-yaml python-tomli pyalpm
          python-structlog python-prctl)
 makedepends=(python-setuptools-scm)
 optdepends=(
   'smtp-forwarder: for sending error reports'
+  'python-sqlalchemy: sql'
 )
 checkdepends=(python-pytest)
 provides=("$_pkgname=$pkgver")
