--- a/archlinuxcn/lilac-git/lilac.yaml
+++ b/archlinuxcn/lilac-git/lilac.yaml
@@ -11,7 +11,10 @@ pre_build_script: |
 
 post_build_script: |
   git_pkgbuild_commit()
-  update_aur_repo()
+
+pre_build: aur_pre_build
+
+post_build: aur_post_build
 
 update_on:
   - source: github
