lib32-gupnp-igd: manual rebuild

--- a/archlinuxcn/lib32-gupnp-igd/lilac.yaml
+++ b/archlinuxcn/lib32-gupnp-igd/lilac.yaml
@@ -25,4 +25,6 @@ update_on:
     alpm: lib32-gupnp
     provided: libgupnp-1.2.so
     strip_release: true
+  - source: manual
+    manual: 1
 staging: true
